# doom-kaios

./: CMakeLists.txt  README.md  SDL_emscriptenevents.c.diff  build-debug.sh  build-release.sh  freedoom1.wad.3  install.sh  package-app.sh
app/: index.html  manifest.webapp  metadata.json  shell_minimal.html  shell_minimal.html.patch  shell_minimal_debug.html  shell_minimal_debug.html.patch  splash.xcf  sys.js
app/icon/: make-icon.sh
src/: config.h  deh_main.c  deh_str.c  doomkeys.h  i_endoom.c  i_input.c  i_main.c  i_sound.c  i_sound.h  i_system.c  i_video.c  m_argv.c  m_argv.h  m_config.c  m_controls.c  m_controls.h  m_misc.c  m_misc.h  v_trans.h  v_video.c  v_video.h  w_file.c  w_file_posix.c  w_file_stdc_chunked.c  w_main.c
src/doom/: d_main.c  g_game.c  m_menu.c  p_inter.c  p_sight.c  r_data.c  s_sound.c
